# rp2040-panic-usb-boot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  memory.x
.cargo/: config
.github/workflows/: release-plz.yml
examples/: panic.rs
src/: lib.rs
