[package]
name = "rp2040-panic-usb-boot"
version = "0.2.0"
authors = ["Jan Niehusmann <jan@gondor.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "On panic, boot to USB mode implmented in ROM"
readme = "README.md"
repository = "https://github.com/jannic/rp2040-panic-usb-boot/"
homepage = "https://github.com/jannic/rp2040-panic-usb-boot/"
keywords = ["panic-handler", "panic-impl", "no-std", "embedded"]

[dependencies]
cortex-m = "0.7.1"
rp2040-hal = { version = "0.4.0", default-features = false }
heapless = "0.7.13"

[dev-dependencies]
rp-pico = "0.3.0"
cortex-m-rt = "0.7.1"
embedded-time = "0.12.1"
embedded-hal = "0.2.7"
