[package]
name = "rp2040-panic-usb-boot"
version = "0.6.0"
authors = ["Jan Niehusmann <jan@gondor.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
description = "On panic, boot to USB mode implemented in ROM"
readme = "README.md"
repository = "https://github.com/jannic/rp2040-panic-usb-boot/"
homepage = "https://github.com/jannic/rp2040-panic-usb-boot/"
keywords = ["panic-handler", "panic-impl", "no-std", "embedded"]

[dependencies]
cortex-m = "0.7.1"

[dev-dependencies]
rp-pico = "0.7.0"
rp2040-hal = { version = "0.8.0", default-features = false }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
